# Fenix

./: .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeCache.txt  CMakeLists.txt  Fenix_GitHub.files  Fenix_Github.files  LICENSE  Makefile  README.md  cmake_install.cmake  eric_cmake.sh  fenixConfig.cmake.in
.github/: Dockerfile  docker-compose.yml  spack.yaml
.github/scripts/: build-gh-pages.sh
.github/workflows/: ci_checks.yaml  docs.yml  linter.yaml
.github/workflows/build-env/: action.yml
.travis_helpers/: fetchULFMmpi.sh
Hemanth_test/: sum_array.c
carson_test/: .sum_array.c.swp  CMakeLists.txt  run.batch  sum_array  sum_array.c
cmake/: fenixConfig.cmake.in  systemMPIOverride.cmake
cmake_scripts/: CMakeLists.txt  Makefile.old  cmake_sample.sh  cmake_sample2.sh  eric_cmake.sh  makedefs  run_cmake.sh
doc/: CMakeLists.txt  DoxygenLayout.xml  DoxygenStyle.css  fake_init.h
doc/examples/: DataRecovery.md  IMR.md  ProcessRecovery.md
doc/html/: CMakeLists.txt  header.html  index.html.in  version_select_handler.js  version_selector.html.in
doc/markdown/: DataRecovery.md  Introduction.md  ProcessRecovery.md
examples/: CMakeLists.txt
examples/01_hello_world/fenix/: CMakeLists.txt  Makefile  cmake_install.cmake  fenix_hello_world  fenix_hello_world.c  run.batch
examples/01_hello_world/mpi/: CMakeLists.txt  Makefile  README  cmake_install.cmake  mpi_hello_world  mpi_hello_world.c  run.batch
examples/02_send_recv/fenix/: CMakeLists.txt  Makefile  README  cmake_install.cmake  fenix_ring  fenix_ring.c  run.batch
examples/02_send_recv/mpi/: CMakeLists.txt  Makefile  cmake_install.cmake  mpi_ring  mpi_ring.c  run.batch  test.batch
examples/03_reduce/fenix/: CMakeLists.txt  Makefile  README  cmake_install.cmake  fenix_reduce  fenix_reduce.c  run.batch
examples/03_reduce/mpi/: CMakeLists.txt  Makefile  README  cmake_install.cmake  mpi_reduce  mpi_reduce.c  run.batch  run.sh
examples/04_Isend_Irecv/fenix/: CMakeLists.txt  Makefile  cmake_install.cmake  fenix_stencil_1D  fenix_stencil_1D.c  run.batch
examples/04_Isend_Irecv/mpi/: CMakeLists.txt  Makefile  cmake_install.cmake  mpi_stencil_1D  mpi_stencil_1D.c  run.batch
examples/05_subset/: subset.c
examples/05_subset_create/: CMakeLists.txt  Makefile  cmake_install.cmake  run.batch  subset  subset_create  subset_create.c
examples/06_subset_create/: subset_create.c
examples/06_subset_createv/: CMakeLists.txt  Makefile  cmake_install.cmake  fenix_subet_createv.err  run.batch  subset_createv  subset_createv.c
examples/07_resizeable_member/: CMakeLists.txt  resizeable.cpp
examples/07_subset_full/: .nfs0000000002d66b720000033d  .nfs0000000002d66b790000033a  .nfs0000000002d66b7b0000033c  .nfs0000000002d66b8100000337  .nfs0000000002d66b8600000339  .nfs0000000002d66bb300000340  .nfs0000000002de955200000370  .nfs0000000002de97e20000036e  CMakeLists.txt  Makefile  cmake_install.cmake  fenix_subet_full.err  run.batch  run.sh  subset_full  subset_full.c  test.out
include/: data_recovery.h  fenix-config.h.in  fenix.h  fenix.hpp  fenix_comm_list.h  fenix_comm_list.hpp  fenix_constants.h  fenix_data_buffer.h  fenix_data_buffer.hpp  fenix_data_group.h  fenix_data_group.hpp  fenix_data_member.h  fenix_data_member.hpp  fenix_data_packet.h  fenix_data_packet.hpp  fenix_data_policy.h  fenix_data_policy.hpp  fenix_data_policy_in_memory_raid.h  fenix_data_policy_in_memory_raid.hpp  fenix_data_recovery.h  fenix_data_recovery.hpp  fenix_data_recovery_ext.h  fenix_data_subset.h  fenix_data_subset.hpp  fenix_data_version.h  fenix_exception.hpp  fenix_ext.h  fenix_ext.hpp  fenix_f.h  fenix_hash.h  fenix_init.h  fenix_metadata.h  fenix_opt.h  fenix_opt.hpp  fenix_proces_recovery_global.h  fenix_process_recovery.h  fenix_process_recovery.hpp  fenix_process_recovery_ext.h  fenix_process_recovery_global.h  fenix_util.h  (+5 more)
src/: CMakeLists.txt  Makefile  cmake_install.cmake  data_recovery.c  fenix-config.h  fenix.c  fenix.cpp  fenix_callbacks.c  fenix_callbacks.cpp  fenix_comm_list.c  fenix_comm_list.cpp  fenix_data_buffer.c  fenix_data_group.c  fenix_data_group.cpp  fenix_data_member.c  fenix_data_member.cpp  fenix_data_policy.c  fenix_data_policy.cpp  fenix_data_policy_in_memory_raid.c  fenix_data_policy_in_memory_raid.cpp  fenix_data_recovery.c  fenix_data_recovery.cpp  fenix_data_subset.c  fenix_data_subset.cpp  fenix_data_version.c  fenix_dynamic_array.h  fenix_exception.cpp  fenix_ext.cpp  fenix_hash.c  fenix_metadata.c  fenix_metadata_recovery.c  fenix_mpi_override.c  fenix_mpi_override.cpp  fenix_opt.c  fenix_opt.cpp  fenix_process_recovery.c  fenix_process_recovery.cpp  fenix_request_store.c  fenix_request_store.h  fenix_stack.h  (+10 more)
test/: CMakeLists.txt
test/CI/: install_prehooks.sh
test/exception_throw/: CMakeLists.txt  fenix_exceptions.cpp
test/failed_spares/: CMakeLists.txt  fenix_failed_spares.c
test/issend/: CMakeLists.txt  fenix_issend_test.c
test/message_replay/: CMakeLists.txt
test/no_jump/: CMakeLists.txt  fenix_no_jump_test.c
test/online/: CMakeLists.txt  Makefile  cmake_install.cmake  online  online.c  run.batch
test/request_cancelled/: CMakeLists.txt  fenix_req_cancelled_test.c
test/request_tracking/: CMakeLists.txt  fenix_request_tracking_test.c
test/sendrecv/: CMakeLists.txt  Makefile  cmake_install.cmake  mpi_send_recv  mpi_send_recv.c  mpi_send_recv.err  run.batch
test/storev/: CMakeLists.txt  storev.cpp
test/subset/: CMakeLists.txt  subset_addition.cpp  subset_common.hpp  subset_copy.cpp  subset_includes.cpp  subset_subtraction.cpp
test/subset_internal/: CMakeLists.txt  Makefile  cmake_install.cmake  fenix_subset_internal_test  fenix_subset_internal_test.c
test/subset_merging/: CMakeLists.txt  fenix_subset_merging_test.c
